node-examples/node modules callback and error handling -- error.txt
C:\node-examples\solve-3.js:1
(function (exports, require, module, __filename, __dirname) { ar argv = require('yargs')
                                                                 ^^^^

SyntaxError: Unexpected identifier
    at exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:387:25)
    at Object.Module._extensions..js (module.js:422:10)
    at Module.load (module.js:357:32)
    at Function.Module._load (module.js:314:12)
    at Function.Module.runMain (module.js:447:10)
    at startup (node.js:141:18)
    at node.js:933:3